@@ -1,19 +1,21 @@
 /*
- * Copyright 2020 Red Hat, Inc. and/or its affiliates.
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
-
 package org.kie.kogito.svg;
 
 import java.io.ByteArrayInputStream;
@@ -26,7 +28,6 @@ import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 
-import org.apache.commons.io.IOUtils;
 import org.kie.kogito.svg.dataindex.DataIndexClient;
 import org.kie.kogito.svg.dataindex.NodeInstance;
 import org.kie.kogito.svg.processor.SVGProcessor;
@@ -87,7 +88,7 @@ public abstract class AbstractProcessSvgService implements ProcessSvgService {
             if (is == null) {
                 return Optional.empty();
             }
-            return Optional.of(IOUtils.toString(is, StandardCharsets.UTF_8.name()));
+            return Optional.of(new String(is.readAllBytes(), StandardCharsets.UTF_8));
         } catch (Exception ex) {
             throw new ProcessSVGException("Exception trying to read file from classpath", ex);
         }
